--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My veggy deliveryies</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>It is better to know where to go</h1>
@@ -14,8 +14,6 @@
       <section>
         <iframe
           src="https://www.google.com/maps/d/embed?mid=1szT6aNXGI5nr-Fgmg7J_9MwywnUbrEs&ehbc=2E312F&noprof=1"
-          width="640"
-          height="480"
         ></iframe>
       </section>
     </main>
