--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section>
         <iframe
           src="https://www.google.com/maps/d/embed?mid=1szT6aNXGI5nr-Fgmg7J_9MwywnUbrEs&ehbc=2E312F&noprof=1"
-          width="auto"
+          width="100vw"
           height="auto"
         ></iframe>
       </section>
