--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <section>
         <iframe
           src="https://www.google.com/maps/d/embed?mid=1szT6aNXGI5nr-Fgmg7J_9MwywnUbrEs&ehbc=2E312F&noprof=1"
-          width="100vw"
-          height="auto"
+          width="640"
+          height="480"
         ></iframe>
       </section>
     </main>
