--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>It is better to know where to go</h1>
+    <h1>Where to go</h1>
     <main>
-      <h2>This should help a bit, Kristof</h2>
-      <p>My deliveries, not all of them, of course</p>
+      <h2>Look and go</h2>
       <section>
         <iframe
           src="https://www.google.com/maps/d/embed?mid=1szT6aNXGI5nr-Fgmg7J_9MwywnUbrEs&ehbc=2E312F&noprof=1"
