--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My veggy deliveryies</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <!-- <body> -->
     <h1>Where to go</h1>
     <main>
       <h2>Look and go</h2>
